--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -7,4 +7,6 @@ $footerHeight: 36px;
 $panelSearchboxHeight: $headerHeight - 20;
 $panelSearchIconColor: #b3b3b3;
 $textColor: #676A6C;
-$screenXsMax: 479px;
+$screen-sm: 768px;
+$screen-mid: 992px;
+$screen-lg: 1200px;
