--- a/src/styles/widget-styles.scss
+++ b/src/styles/widget-styles.scss
@@ -97,7 +97,7 @@
     padding: 1px;
     border: 2px solid;
     text-decoration: none;
-    box-sizing: content-box!important;
+    box-sizing: content-box;
   }
 
   @media (max-width: $screenXsMax) {
