--- a/src/styles/widget-styles.scss
+++ b/src/styles/widget-styles.scss
@@ -63,8 +63,8 @@
   #bb-help-container.bb-help-closed {
     #bb-help-invoker:not(:hover) {
       height: $collapsedHeaderHeight;
-      border-bottom-left-radius: 24px;
-      border-top-left-radius: 24px;
+      border-bottom-left-radius: 25px;
+      border-top-left-radius: 25px;
       width: 30px;
       padding: 2px 10px 7px 6px;
     }
@@ -72,31 +72,31 @@
 }
 
 #bb-help-invoker {
-  box-sizing: border-box;
-  border-bottom-left-radius: 24px;
-  border-top-left-radius: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-bottom-left-radius: 25px;
+  border-top-left-radius: 25px;
   border: none;
   background: #71bf44;
   color: #fff;
   position: absolute;
   cursor: pointer;
-  height: 48px;
+  height: 50px;
   width: 40px;
   right: 100%;
 
   span {
-    display: inline-block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-family: sans-serif;
     font-weight: 700;
-    text-align: center;
-    width: 2ex;
-    height: 2ex;
+    width: 2.5ex;
+    height: 2.5ex;
     font-size: 14px;
-    line-height: 2ex;
-    border-radius: 1.4ex;
-    padding: 1px;
+    border-radius: 100%;
     border: 2px solid;
-    text-decoration: none;
     box-sizing: content-box;
   }
 
