center invoker icon and remove border and outline (#21)

--- a/src/styles/widget-styles.scss
+++ b/src/styles/widget-styles.scss
@@ -85,6 +85,9 @@
   height: 50px;
   width: 40px;
   right: 100%;
+  padding-left: 10px;
+  border: none;
+  outline: none;
 
   span {
     display: flex;
